--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,7 @@
     tools:context=".Login">
 
     <EditText
-        android:id="@+id/editTextTextPassword"
+        android:id="@+id/passwordTxtv"
         android:layout_width="231dp"
         android:layout_height="44dp"
         android:layout_marginStart="21dp"
@@ -15,7 +15,7 @@
         android:ems="10"
         android:inputType="textPassword"
         app:layout_constraintStart_toEndOf="@+id/textView"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
+        app:layout_constraintTop_toBottomOf="@+id/emailTxtv" />
 
     <TextView
         android:id="@+id/textView"
@@ -29,7 +29,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName"
+        android:id="@+id/emailTxtv"
         android:layout_width="229dp"
         android:layout_height="50dp"
         android:layout_marginStart="21dp"
@@ -50,7 +50,7 @@
         android:textAlignment="center"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintTop_toBottomOf="@+id/signOutButton" />
 
     <TextView
         android:id="@+id/textView2"
@@ -71,13 +71,13 @@
         android:layout_marginTop="78dp"
         android:text="SignUp"
         app:layout_constraintStart_toEndOf="@+id/textView3"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintTop_toBottomOf="@+id/signOutButton" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/signOutButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Login"
+        android:text="sign out"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         tools:layout_editor_absoluteY="341dp" />
