--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -4,85 +4,146 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SignUp">
+    android:background="#ffffff"
+    tools:context=".SignUp.View.SignUpActivity">
 
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="63dp"
-        android:text="Signup"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2" />
+    <!--    <LinearLayout-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="match_parent"-->
+    <!--        android:orientation="vertical"-->
+    <!--        android:weightSum="4">-->
 
-    <EditText
-        android:id="@+id/editTextTextPersonName2"
-        android:layout_width="229dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="42dp"
-        android:layout_marginTop="153dp"
-        android:ems="10"
-        android:hint="Email"
-        android:inputType="textPersonName"
-        app:layout_constraintStart_toEndOf="@+id/textView6"
-        app:layout_constraintTop_toTopOf="parent" />
+    <!--        <androidx.constraintlayout.widget.ConstraintLayout-->
+    <!--            android:layout_width="match_parent"-->
+    <!--            android:layout_height="0dp"-->
+    <!--            android:layout_weight="0.8"-->
+    <!--            android:background="#0386C1">-->
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="69dp"
-        android:text="Password"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView6" />
+    <!--            <TextView-->
+    <!--                android:id="@+id/textView6"-->
+    <!--                android:layout_width="357dp"-->
+    <!--                android:layout_height="48dp"-->
+    <!--                android:layout_marginStart="16dp"-->
+    <!--                android:layout_marginTop="6dp"-->
+    <!--                android:text="Register to securely back up your data on your servers "-->
+    <!--                android:textColor="#FFFFFF"-->
+    <!--                android:textSize="18sp"-->
+    <!--                app:layout_constraintStart_toStartOf="parent"-->
+    <!--                app:layout_constraintTop_toBottomOf="@+id/exitButton" />-->
 
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="160dp"
-        android:text="Username"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <!--            <Button-->
+    <!--                android:id="@+id/exitButton"-->
+    <!--                android:layout_width="38dp"-->
+    <!--                android:layout_height="44dp"-->
+    <!--                android:layout_marginStart="16dp"-->
+    <!--                android:layout_marginTop="8dp"-->
+    <!--                android:background="?android:attr/selectableItemBackground"-->
+    <!--                android:text="X"-->
+    <!--                android:textColor="#FFFFFF"-->
+    <!--                app:layout_constraintStart_toStartOf="parent"-->
+    <!--                app:layout_constraintTop_toTopOf="parent"-->
+    <!--                tools:ignore="TouchTargetSizeCheck" />-->
 
-    <EditText
-        android:id="@+id/editTextTextPassword2"
-        android:layout_width="231dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="45dp"
-        android:ems="10"
-        android:inputType="textPassword"
-        app:layout_constraintStart_toEndOf="@+id/textView4"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2"
-        tools:ignore="SpeakableTextPresentCheck" />
+    <!--            <Button-->
+    <!--                android:id="@+id/logOutButton"-->
+    <!--                android:layout_width="70dp"-->
+    <!--                android:layout_height="43dp"-->
+    <!--                android:layout_marginTop="8dp"-->
+    <!--                android:layout_marginEnd="8dp"-->
+    <!--                android:background="?android:attr/selectableItemBackground"-->
+    <!--                android:text="log out"-->
+    <!--                android:textColor="#FFFFFF"-->
+    <!--                android:textSize="10sp"-->
+    <!--                app:layout_constraintEnd_toEndOf="parent"-->
+    <!--                app:layout_constraintTop_toTopOf="parent"-->
+    <!--                tools:ignore="TouchTargetSizeCheck" />-->
+    <!--        </androidx.constraintlayout.widget.ConstraintLayout>-->
 
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="223dp"
-        android:layout_height="26dp"
-        android:layout_marginStart="48dp"
-        android:layout_marginTop="72dp"
-        android:text="Already have an account?"
-        android:textAlignment="center"
-        android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button3" />
+    <!--        <androidx.constraintlayout.widget.ConstraintLayout-->
+    <!--            android:layout_width="match_parent"-->
+    <!--            android:layout_height="0dp"-->
+    <!--            android:layout_weight="3.2"-->
+    <!--            android:background="#F8F5F5">-->
 
-    <Button
-        android:id="@+id/button4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="60dp"
-        android:text="Login"
-        app:layout_constraintStart_toEndOf="@+id/textView5"
-        app:layout_constraintTop_toBottomOf="@+id/button3" />
+    <!--            <EditText-->
+    <!--                android:id="@+id/emailEditText"-->
+    <!--                android:layout_width="350dp"-->
+    <!--                android:layout_height="wrap_content"-->
+    <!--                android:layout_marginTop="28dp"-->
+    <!--                android:ems="10"-->
+    <!--                android:hint="@string/email"-->
+    <!--                android:inputType="textEmailAddress"-->
+    <!--                app:layout_constraintEnd_toEndOf="parent"-->
+    <!--                app:layout_constraintHorizontal_bias="0.5"-->
+    <!--                app:layout_constraintStart_toStartOf="parent"-->
+    <!--                app:layout_constraintTop_toTopOf="parent"-->
+    <!--                tools:ignore="TouchTargetSizeCheck" />-->
+
+    <!--            <EditText-->
+    <!--                android:id="@+id/passwordEditText"-->
+    <!--                android:layout_width="350dp"-->
+    <!--                android:layout_height="wrap_content"-->
+    <!--                android:layout_marginTop="38dp"-->
+    <!--                android:ems="10"-->
+    <!--                android:hint="@string/password"-->
+    <!--                android:inputType="textPassword"-->
+    <!--                app:layout_constraintEnd_toEndOf="parent"-->
+    <!--                app:layout_constraintHorizontal_bias="0.5"-->
+    <!--                app:layout_constraintStart_toStartOf="parent"-->
+    <!--                app:layout_constraintTop_toBottomOf="@+id/emailEditText"-->
+    <!--                tools:ignore="TouchTargetSizeCheck" />-->
+
+    <!--            <Button-->
+    <!--                android:id="@+id/signUpButton"-->
+    <!--                android:layout_width="350dp"-->
+    <!--                android:layout_height="wrap_content"-->
+    <!--                android:layout_marginTop="160dp"-->
+    <!--                android:background="#0386C1"-->
+    <!--                android:text="@string/sign_up"-->
+    <!--                android:textColor="#FFFFFF"-->
+    <!--                android:textSize="18sp"-->
+    <!--                app:layout_constraintEnd_toEndOf="parent"-->
+    <!--                app:layout_constraintHorizontal_bias="0.508"-->
+    <!--                app:layout_constraintStart_toStartOf="parent"-->
+    <!--                app:layout_constraintTop_toBottomOf="@+id/passwordEditText"-->
+    <!--                tools:ignore="TextContrastCheck" />-->
+
+    <!--            <Button-->
+    <!--                android:id="@+id/googleButton"-->
+    <!--                android:layout_width="350dp"-->
+    <!--                android:layout_height="wrap_content"-->
+    <!--                android:layout_marginTop="43dp"-->
+    <!--                android:background="#ECE8E8"-->
+    <!--                android:text="Google"-->
+    <!--                app:layout_constraintEnd_toEndOf="parent"-->
+    <!--                app:layout_constraintHorizontal_bias="0.508"-->
+    <!--                app:layout_constraintStart_toStartOf="parent"-->
+    <!--                app:layout_constraintTop_toBottomOf="@+id/signUpButton" />-->
+
+    <!--            <Button-->
+    <!--                android:id="@+id/logInButton"-->
+    <!--                android:layout_width="350dp"-->
+    <!--                android:layout_height="wrap_content"-->
+    <!--                android:layout_marginTop="84dp"-->
+    <!--                android:background="#0386C1"-->
+    <!--                android:text="@string/login"-->
+    <!--                android:textColor="#FFFFFF"-->
+    <!--                android:textSize="18sp"-->
+    <!--                app:layout_constraintEnd_toEndOf="parent"-->
+    <!--                app:layout_constraintHorizontal_bias="0.5"-->
+    <!--                app:layout_constraintStart_toStartOf="parent"-->
+    <!--                app:layout_constraintTop_toBottomOf="@+id/passwordEditText"-->
+    <!--                tools:ignore="TextContrastCheck" />-->
+
+    <!--        </androidx.constraintlayout.widget.ConstraintLayout>-->
+
+    <!--        <ProgressBar-->
+    <!--            android:id="@+id/progressbar"-->
+    <!--            android:layout_width="wrap_content"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:visibility="gone"></ProgressBar>-->
+
+
+    <!--    </LinearLayout>-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
