--- a/app/src/main/res/navigation/main_navigation_grapg.xml
+++ b/app/src/main/res/navigation/main_navigation_grapg.xml
@@ -3,28 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_navigation_grapg"
-    app:startDestination="@id/myFirstFragment">
+    app:startDestination="@id/home">
 
     <fragment
-        android:id="@+id/dependentInfoFragment"
-        android:name="com.example.medicalappreminder_java.DependentInfoFragment"
-        android:label="fragment_dependent_info"
-        tools:layout="@layout/fragment_dependent_info" >
-        <action
-            android:id="@+id/navigateFromDependentToHomeFragmentActionId"
-            app:destination="@id/myFirstFragment"
-            app:enterAnim="@android:anim/fade_in"
-            app:exitAnim="@android:anim/fade_out" />
-    </fragment>
-    <fragment
-        android:id="@+id/myFirstFragment"
+        android:id="@+id/medication"
         android:name="com.example.medicalappreminder_java.MyFirstFragment"
-        android:label="fragment_my_first_frgment"
-        tools:layout="@layout/fragment_my_first_frgment" >
-        <action
-            android:id="@+id/navigateFromHomeFragmentToDependentActionId"
-            app:destination="@id/dependentInfoFragment"
-            app:enterAnim="@android:anim/fade_in"
-            app:exitAnim="@android:anim/fade_out" />
-    </fragment>
+        tools:layout="@layout/fragment_my_first_frgment" />
+    <fragment
+        android:id="@+id/home"
+        android:name="com.example.medicalappreminder_java.HomeScreen.View.HomeFragment.HomeFragment"
+        tools:layout="@layout/fragment_home" />
+    <fragment
+        android:id="@+id/add_dependent"
+        android:name="com.example.medicalappreminder_java.DependentInfoFragment"
+        tools:layout="@layout/fragment_dependent_info" />
 </navigation>
