--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,14 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".HomeScreen.View.HomeFragment.HomeFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <devs.mulham.horizontalcalendar.HorizontalCalendarView
+        android:id="@+id/calendarView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="4dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:selectorColor="#3F51B5"
+        app:sizeMiddleText="@dimen/_15sdp"
+        app:sizeTopText="@dimen/_10sdp"
+        app:textColorNormal="#696C6C"
+        app:textColorSelected="#3F51B5"
+        tools:ignore="SpeakableTextPresentCheck" />
 
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
