--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -34,4 +34,9 @@
             </menu>
         </item>
     </group>
+    <item
+        android:id="@+id/logOutButton"
+        android:icon="@drawable/ic_baseline_login_24"
+        android:title="@string/Logout" />
+
 </menu>
