--- a/app/src/main/res/layout/fragment_dependent_info.xml
+++ b/app/src/main/res/layout/fragment_dependent_info.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true">
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#0a5087"
-        tools:context=".DependentInfoFragment">
+        tools:context=".DependantInfo.DependentInfoFragment">
 
 
 
@@ -20,10 +20,11 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.24" />
+
         <com.example.medicalappreminder_java.uihelper.RoundedCornerLayout
             android:id="@+id/view"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_width="381dp"
+            android:layout_height="594dp"
             android:layout_marginBottom="-30dp"
             android:background="#FFFFFF"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -134,7 +135,7 @@
                 android:layout_marginBottom="10dp"
                 android:backgroundTint="#0a5087"
                 android:clickable="true"
-                android:src="@drawable/ic_add"
+                android:src="@drawable/male"
                 android:textColor="@color/white"
                 app:icon="@drawable/ic_add"
                 app:iconTint="@color/white"
