--- a/app/src/main/res/layout/fragment_my_first_frgment.xml
+++ b/app/src/main/res/layout/fragment_my_first_frgment.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    class = "com.example.medicalappreminder_java.activandinactivemedscreen.view.MyFirstFragment"
+    class = "com.example.medicalappreminder_java.MyFirstFragment"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activandinactivemedscreen.view.MyFirstFragment">
+    tools:context=".MyFirstFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
