--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -29,10 +29,10 @@
                     android:textColor="#FFFFFF"
                     android:textSize="18sp"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/exitButton" />
+                    app:layout_constraintTop_toBottomOf="@+id/exitButtonFromSignUp" />
 
                 <Button
-                    android:id="@+id/exitButton"
+                    android:id="@+id/exitButtonFromSignUp"
                     android:layout_width="38dp"
                     android:layout_height="44dp"
                     android:layout_marginStart="16dp"
@@ -44,19 +44,6 @@
                     app:layout_constraintTop_toTopOf="parent"
                     tools:ignore="TouchTargetSizeCheck" />
 
-                <Button
-                    android:id="@+id/logOutButton"
-                    android:layout_width="70dp"
-                    android:layout_height="43dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginEnd="8dp"
-                    android:background="?android:attr/selectableItemBackground"
-                    android:text="log out"
-                    android:textColor="#FFFFFF"
-                    android:textSize="10sp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    tools:ignore="TouchTargetSizeCheck" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -108,37 +95,10 @@
                     app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
                     tools:ignore="TextContrastCheck" />
 
-                <Button
-                    android:id="@+id/googleButton"
-                    android:layout_width="350dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="43dp"
-                    android:background="#ECE8E8"
-                    android:text="Google"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.508"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/signUpButton" />
-
-                <Button
-                    android:id="@+id/logInButton"
-                    android:layout_width="350dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="84dp"
-                    android:background="#0386C1"
-                    android:text="@string/login"
-                    android:textColor="#FFFFFF"
-                    android:textSize="18sp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.5"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
-                    tools:ignore="TextContrastCheck" />
-
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <ProgressBar
-                android:id="@+id/progressbar"
+                android:id="@+id/signUpProgressbar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:visibility="gone"></ProgressBar>
