--- a/app/src/main/res/layout/activity_add_medicine.xml
+++ b/app/src/main/res/layout/activity_add_medicine.xml
@@ -7,7 +7,7 @@
     android:background="#F3F0F7"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <fragment
-        android:id="@+id/nav_host_fragment_activity_main"
+        android:id="@+id/navHost"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
