--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -56,14 +56,14 @@
                     android:id="@+id/emailEditText"
                     android:layout_width="350dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="28dp"
+                    android:layout_marginTop="38dp"
                     android:ems="10"
                     android:hint="@string/email"
                     android:inputType="textEmailAddress"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintHorizontal_bias="0.508"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/registerUserNameEditText"
                     tools:ignore="TouchTargetSizeCheck" />
 
                 <EditText
@@ -94,6 +94,19 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
                     tools:ignore="TextContrastCheck" />
+
+                <EditText
+                    android:id="@+id/registerUserNameEditText"
+                    android:layout_width="353dp"
+                    android:layout_height="43dp"
+                    android:layout_marginTop="24dp"
+                    android:gravity="center|left"
+                    android:hint="User Name"
+                    android:paddingStart="8dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.508"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
